tests/error/modifier_errors/flag_branch2.err
Error: Invalid expression in dagger (at $FILE:7:12)
  | 
5 | @guppy(dagger=True, power=True)
6 | def test() -> None:
7 |         x = 3 if 2 > 46 else 0
  |             ^^^^^^^^^^^^^^^^^^ Branch found in a dagger context

Help: The function `test` is declared with the unitary flag: `dagger=True`. Thus
dagger constraints apply to its body.

Guppy compilation failed due to 1 previous error
